<resources>
    <string name="app_name">MusicComposer</string>
    <string name="bluetooth_not_supported">This device does not support Bluetooth.</string>
    <string name="search">Search Again !</string>
    <string name="discovered">Discoverd Devices</string>
    <string name="paired">Paired Devices</string>
    <string name="cant_connect">Can not connect to this device. Please try again!</string>
    <string name="music_btn">Music Sheet</string>
    <string name="blue_btn">Bluetooth Settings</string>
    <string name="metronome">Metronome</string>
    <string name="set">Set</string>
    <string name="not_support_file">This file does not supported.</string>
    <string name="about_btn">About</string>
    <string name="music_sheet">Music Sheet</string>
    <string name="blutooth_setting">Bluetooth Setting</string>
    <string name="about">An about text for music sheet</string>
    <string name="sure_save">Do you want to save this sheet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
