<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/note_4_1"
            android:layout_weight="4"
            android:layout_gravity="right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/music_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_btn"
            android:layout_weight="1"
            android:layout_gravity="center"
             />

        <Button
            android:id="@+id/blue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_btn"
            android:layout_weight="1"
            android:layout_gravity="center"
             />
        <Button
            android:id="@+id/metronome_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metronome"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>